--- a/Debate.css
+++ b/Debate.css
@@ -1,3 +1,16 @@
+.login{
+  background-color: #00FF7F;
+}
+
+.logout{
+  background-color: #778899;
+}
+
+.no_applicant{
+  background-color: #FFFACD;
+}
+
+
 #container_main {
 	background-color: #EEEEEE;
 	width: 1012px;
